<resources>
    <string name="app_name">SpinWheel</string>
    <string name="success_action">Claim 🏆 %s</string>
    <string name="default_action">%s + 🏆 %s</string>

    <!--Category Component-->
    <string name="header_you">You</string>
    <string name="header_avg">Avg</string>
    <string name="category_spend"><![CDATA[If you spent average amount on<br>🍔 restaurants you could save:<br><b>$76 /mo</b> or <b>$912 /yr</b>]]></string>
    
    <!--Sweepstakes Component-->
    <string name="points">🏆 %spts per entry</string>
    <string name="entry">🎟️️ %s entries so far</string>
    <string name="sweepstakes_ends">Sweepstakes ends</string>
    <string name="enter_sweepstakes">Enter Sweepstakes</string>
    
    <!--Spin the wheel Component-->
    <string name="spin_wheel_title">Spin the Wheel</string>
    <string name="spin_wheel_sub_title">to Win Points!</string>
    <string name="spin_wheel_points">🏆️ %spts per spin</string>
    <string name="spin_wheel_desc">Win up to 🏆️%s pts each spin! </string>

    <!--Points Item card component-->
    <string name="points_item_ear_cup">🏆</string>
    <string name="points_item_earn">\u0020Earn %s points</string>

    <!--To Do Card Component-->
    <string name="todo_points">🏆 %s</string>
    <string name="todo_header">Let’s work on getting you\nyour first boost!</string>
</resources>
